load("@rules_python//python:defs.bzl", "py_binary")
load("@my_deps//:requirements.bzl", "requirement")
load("//toolbox:defs.bzl", "kbpb_from_kle", "keyboard_plate_dxf")

py_binary(
    name = "test_layout",
    srcs = [
        "test_layout.py",
    ],
    deps = [
        requirement("absl-py"),
        "//toolbox:keyboard_lib",
    ],
)

genrule(
    name = "test_layout_pb",
    outs = ["test_layout.pb"],
    cmd = "./$(location :test_layout) --output=\"$@\"",
    tools = [":test_layout"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "test_layout_svg",
    srcs = [":test_layout_pb"],
    outs = ["test_layout.svg"],
    cmd = "./$(location //toolbox/cli) --input=\"$<\" --format=svg --output=\"$@\"",
    tools = ["//toolbox/cli"],
)

kbpb_from_kle(
    name = "tkl_layout_pb",
    src = "tkl-kle.json",
    visibility = ["//visibility:public"],
)

keyboard_plate_dxf(
    name = "tkl_layout_dxf",
    src = "tkl_layout_pb",
)
