load("@com_github_kleinpa_kicadbazel//tools:defs.bzl", "gerbers_from_kicad")
load("//kbtb:defs.bzl", "bomcpl_from_kicad")

gerbers_from_kicad(
    name = "numpad_board_routed",
    src = "numpad_board_routed.kicad_pcb",
)

bomcpl_from_kicad(
    name = "numpad_bom",
    src = "numpad_board_routed.kicad_pcb",
)

gerbers_from_kicad(
    name = "atmega32u4_demo",
    src = "atmega32u4_demo.kicad_pcb",
)

bomcpl_from_kicad(
    name = "atmega32u4_demo_bom",
    src = "atmega32u4_demo.kicad_pcb",
)
